Update products & Route file combined

--- a/Node-Basics/Views/includes/navigation.ejs
+++ b/Node-Basics/Views/includes/navigation.ejs
@@ -1,12 +1,14 @@
 <div class="mainDiv">
-    <nav>
-        <ul>
-            <li>
-                <a href="/" class="<%- path==='/' ? 'active' : '' %>">Home</a>
-            </li>
-            <li>
-                <a href="/admin/add-product" class="<%- path==='/' ? 'active' : '' %>">Add Product</a>
-            </li>
-        </ul>
-    </nav>
+  <nav>
+    <ul>
+      <li>
+        <a href="/admin/" class="<%- path==='/' ? 'active' : '' %>">Home</a>
+      </li>
+      <li>
+        <a href="/admin/add-product" class="<%- path==='/' ? 'active' : '' %>"
+          >Add Product</a
+        >
+      </li>
+    </ul>
+  </nav>
 </div>
