--- a/Node-Basics/Views/store.ejs
+++ b/Node-Basics/Views/store.ejs
@@ -37,7 +37,7 @@
   <div class="card">
     <h1><%= products.name %></h1>
 
-    <button><a href="/products/<%= products.id %>">Details</a></button>
+    <button><a href="/admin/products/<%= products.id %>">Details</a></button>
     <button>Add to Cart</button>
   </div>
 
